--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -13,10 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-    # 🔐 CodeQL
+    # 1️⃣ CodeQL
     - name: Init CodeQL
       uses: github/codeql-action/init@v3
       with:
@@ -25,21 +24,28 @@ jobs:
     - name: Run CodeQL
       uses: github/codeql-action/analyze@v3
 
-    # 🔍 Bandit
+    # 2️⃣ Bandit
     - name: Install Bandit
       run: pip install bandit
 
     - name: Run Bandit
-      run: bandit -r app --severity-level high
+      run: bandit -r api --severity-level high
 
-    # 🐳 Docker build
+    # 3️⃣ Dependency Scan
+    - name: Install Safety
+      run: pip install safety
+
+    - name: Dependency vulnerability scan
+      run: safety check -r requirements.txt
+
+    # 4️⃣ Docker Build
     - name: Build Docker image
-      run: docker build -t devsecops-flask .
+      run: docker build -t devsecops-api .
 
-    # 🛡 Trivy
-    - name: Trivy scan
+    # 5️⃣ Trivy
+    - name: Trivy Scan
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: devsecops-flask
+        image-ref: devsecops-api
         severity: CRITICAL,HIGH
         exit-code: 1
